.ops/config/kubernetes/namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "PROJECTNAMESPACE",
    "labels": {
      "name": "PROJECTNAMESPACE"
    }
  }
}
