.ops/config/kubernetes/svc-redis.yaml

apiVersion: apps/v1  # API version
kind: Deployment
metadata:
  name: PROJECTSLUG-ENVIRONMENT-redis-master # Unique name for the deployment
  namespace: PROJECTNAMESPACE
  labels:
    app: PROJECTSLUG-ENVIRONMENT
spec:
  selector:
    matchLabels:     # This deployment applies to the Pods matching these labels
      app: PROJECTSLUG-ENVIRONMENT
      #role: master
      tier: backend
  strategy:
    type: RollingUpdate
  replicas: 1        # Run a single pod in the deployment
  template:          # Template for the pods that will be created by this deployment
    metadata:
      labels:        # Labels to be applied to the Pods in this deployment
        app: PROJECTSLUG-ENVIRONMENT
        #role: master
        tier: backend
    spec:            # Spec for the container which will be run inside the Pod.
      containers:
      - name: PROJECTSLUG-ENVIRONMENT-redis-master
        #image: redis
        image: harbor.bjoernbartels.earth:8013/devops/redis-runtime-env:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
