.ops/config/kubernetes/svc-pma.yaml
# admin-pma application
apiVersion: v1
kind: Service
metadata:
  name: PROJECTSLUG-ENVIRONMENT-admin-pma
  namespace: PROJECTNAMESPACE
  labels:
    app: PROJECTSLUG-ENVIRONMENT
    team: PROJECTSLUG-ENVIRONMENT
    stage: ENVIRONMENT
    build: BUILD_LABEL
spec:
  type: LoadBalancer
  #type: NodePort
  ports:
    - port: 80
      #targetPort: 80
  selector:
    app: PROJECTSLUG-ENVIRONMENT
    tier: admin
---

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: PROJECTSLUG-ENVIRONMENT-admin-pma
  namespace: PROJECTNAMESPACE
  labels:
    app: PROJECTSLUG-ENVIRONMENT
    team: PROJECTSLUG-ENVIRONMENT
    stage: ENVIRONMENT
    build: BUILD_LABEL
spec:
  selector:
    matchLabels:
      app: PROJECTSLUG-ENVIRONMENT
      tier: admin
  replicas: 1
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: PROJECTSLUG-ENVIRONMENT
        team: PROJECTSLUG-ENVIRONMENT
        stage: ENVIRONMENT
        build: BUILD_LABEL
        tier: admin
    spec:
      containers:
      - name: PROJECTSLUG-ENVIRONMENT-admin-pma
        image: phpmyadmin/phpmyadmin
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 3
          failureThreshold: 5
---
